2010-01-13 Magnus Hagdorn
 * example-drivers/EISMINT-3/src/eismint3_types.F90: use new macros to support
   allocatable arrays as components in derived types
 * example-drivers/eis/src/eis_ela.F90: ditto
 * libglide/glide_setup.F90: ditto
 * libglide/glide_types.F90: ditto
 * libglimmer/glimmer_config.F90: ditto
 * libglimmer/glimmer_horizcoord.F90: ditto
 * libglimmer/glimmer_vertcoord.F90: ditto
 * libglint/glint_interp.F90: ditto
 * libglint/glint_mbal_coupling.F90: ditto
 * libglint/glint_timestep.F90: ditto
 * libglint/glint_type.F90: ditto
 * tests/EISMINT/src/simple_forcing.F90: ditto

2010-01-12 Magnus Hagdorn
 * libglide/glide_setup.F90: also need to setup sigma coordinates when they are
   specified in the configuration file
 * libglide/isostasy_types.F90: fix bug

2010-01-12 Magnus Hagdorn
 * libglide/Makefile.am: bundle isostasy code into a convinience library
 * libglide/isostasy.F90: convert doc strings to doxygen
 * libglide/isostasy_el.F90: ditto
 * libglide/isostasy_setup.F90: ditto
 * libglide/isostasy_types.F90: ditto

2010-01-11 Magnus Hagdorn
 * libglide/Makefile.am: remove file
 * libglide/glide_deriv.F90 moved to libglimmer/glimmer_deriv_time.F90
 * libglimmer/glimmer_deriv_time.F90: rename module and derived type
 * libglide/glide_types.F90: use new module and derived type names
 * libglide/glide_velo.F90: ditto
 * libglimmer/Makefile.am: add new file

2010-01-08 Magnus Hagdorn
 * libglide/Makefile.am: remove file
 * libglide/glide.F90: API changed
 * libglide/glide_stop.F90: ditto
 * libglimmer/ncdf_template.F90.in: ditto
 * libglint/glint_initialise.F90: ditto
 * libglide/glimmer_ncio.F90: moved to libglimmer
 * libglimmer/glimmer_ncio.F90: change arguments so that instead of 
   glide_global_type individual components are passed
 * libglimmer/Makefile.am: add new file

2010-01-06 Magnus Hagdorn
 * configure.in: detect whether fortran compiler supports allocatable